[project]
name = "health-wellness-agent2"
version = "0.1.0"
description = "Health and Wellness AI Agent with FastAPI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai-agents>=0.10.0",
    "pydantic>=2.10",
    "fastapi>=0.115,<0.117",
    "uvicorn>=0.30",
    "python-dotenv",
    "python-multipart",
]
